@@ -171,7 +171,7 @@
 #keyfile
 
 # This option defines the version of the TLS protocol to use for this listener.
-# The default value will always be the highest version that is available for
+# The default value allows v1.2, v1.1 and v1.0, if they are all supported by
 # the version of openssl that the broker was compiled against. For openssl >=
 # 1.0.1 the valid values are tlsv1.2 tlsv1.1 and tlsv1. For openssl < 1.0.1 the
 # valid values are tlsv1.
